--- a/css/index.css
+++ b/css/index.css
@@ -58,12 +58,12 @@ html{
 {
   box-sizing: inherit;
 }
-/* *:focus
+*:focus
 {
 
-  outline: 3px dashed var(--primary);
+  outline: 3px dashed var(--purple);
   outline-offset:3px;
-} */
+}
 body
 {
   display: flex;
@@ -163,4 +163,66 @@ img
   text-align: center;
   font-size: 19px;
   background-color: var(--grren);
+}
+
+/* signup form */
+
+.signup-form {
+  width: 100%;
+  max-width: 570px;
+  padding: 55px 60px 40px;
+  margin-left: 12px;
+  border-radius: 20px;
+  overflow: hidden;
+  background-color: #fff;
+}
+.signup-form-heading {
+  margin-top: 0;
+  margin-bottom: 65px;
+  font-size: 32px;
+  line-height: 42px;
+  font-weight: 600;
+}
+.signup-form-fields {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 65px;
+}
+.signup-form-field {
+  padding-top: 15px;
+  padding-bottom: 14px;
+  border: 0;
+  border-bottom: 1px solid #555;
+  color: #555;
+}
+.signup-form-field:focus
+{
+  border-color: #000;
+  font-weight: 600;
+  color: #000;
+}
+.signup-form-field:not(:last-child)
+{
+  margin-bottom: 20px;
+}
+.btn-form {
+  width: 100%;
+  padding: 20px;
+  font-weight: 600;
+  display: block;
+  border:0;
+  border-radius:10px;
+  background-color: var(--purple);
+  color: #fff;
+  cursor: pointer;
+  margin-bottom: 8px;
+}
+.signup-form-notice {
+  font-size: 11px;
+  line-height: 15px;
+  text-align: center;
+}
+.signup-form-notice-link {
+  font-weight: 500;
+  color: var(--red);
 }
